--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -1,60 +1,63 @@
-version: '3.8'
+version: '3.9'
 
 services:
-  media:
-    image: alfg/nginx-rtmp
-    container_name: media
+  postgres:
+    image: postgres:15-alpine
+    container_name: camera-bridge-postgres
+    environment:
+      POSTGRES_DB: camera_bridge
+      POSTGRES_USER: camera_bridge
+      POSTGRES_PASSWORD: camera_bridge
     ports:
+      - "5432:5432"
+    volumes:
+      - postgres-data:/var/lib/postgresql/data
+
+  rtsp-simulator:
+    image: bluenviron/mediamtx:latest
+    container_name: camera-bridge-rtsp
+    environment:
+      MTX_PROTOCOLS: tcp
+    ports:
+      - "8554:8554"
       - "1935:1935"
-      - "8080:80"
-    volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf:ro
-      - media-hls:/tmp/hls
+    command: ["mediamtx"]
 
-  janus:
-    image: meetecho/janus-gateway
-    container_name: janus
-    network_mode: "host"
-    environment:
-      - JANUS_LOG_LEVEL=4
-      - JANUS_PLUGIN_DIR=/usr/local/lib/janus/plugins
-    volumes:
-      - ../media/janus:/usr/local/etc/janus:ro
-
-  bridge-api:
-    build: ../bridge-api
-    container_name: bridge-api
-    depends_on:
-      - media
-      - janus
-      - ingest-worker
+  backend:
+    build:
+      context: ..
+      dockerfile: backend/Dockerfile
+    container_name: camera-bridge-backend
     env_file:
-      - ./.env
-    volumes:
-      - ../bridge-api/openapi.yaml:/app/openapi.yaml:ro
-      - ./keys/dev.key:/run/bridge/jwt.key:ro
-      - ./keys/dev.pub:/run/bridge/jwt.pub:ro
+      - ../sample-configs/backend.env.example
     environment:
-      - JWT_PRIVATE_KEY_PATH=/run/bridge/jwt.key
-      - JWT_PUBLIC_KEY_PATH=/run/bridge/jwt.pub
-
-  ingest-worker:
-    build: ../ingest-worker
-    container_name: ingest-worker
-    env_file:
-      - ./.env
+      RTSP_TEST_URL: rtsp://rtsp-simulator:8554/mystream
     depends_on:
-      - media
-
-  web-demo:
-    image: nginx:alpine
-    container_name: web-demo
-    depends_on:
-      - bridge-api
-    volumes:
-      - ../web-demo:/usr/share/nginx/html:ro
+      - postgres
+      - rtsp-simulator
     ports:
-      - "5173:80"
+      - "4000:4000"
+
+  frontend:
+    build:
+      context: ..
+      dockerfile: frontend/Dockerfile
+    container_name: camera-bridge-frontend
+    environment:
+      VITE_BACKEND_URL: http://backend:4000
+    depends_on:
+      - backend
+    ports:
+      - "5173:4173"
+
+  bridge-agent:
+    build:
+      context: ..
+      dockerfile: bridge-agent/Dockerfile
+    container_name: camera-bridge-agent
+    volumes:
+      - ../sample-configs/bridge-agent.yaml:/app/config/bridge-agent.yaml:ro
+    network_mode: "host"
 
 volumes:
-  media-hls:
+  postgres-data:
