--- a/package.json
+++ b/package.json
@@ -1,76 +1,31 @@
 {
-  "name": "nextn",
+  "name": "camera-bridge-platform",
   "version": "0.1.0",
   "private": true,
+  "workspaces": [
+    "frontend",
+    "backend"
+  ],
   "scripts": {
-    "dev": "cross-env NODE_ENV=development tsx server.ts",
-    "dev:check": "node scripts/check-env.js && cross-env NODE_ENV=development tsx server.ts",
-    "genkit:dev": "genkit start -- tsx src/ai/dev.ts",
-    "genkit:watch": "genkit start -- tsx --watch src/ai/dev.ts",
-    "build": "next build",
-  "start": "cross-env NODE_ENV=production tsx server.ts",
-    "lint": "next lint",
-    "typecheck": "tsc --noEmit"
+    "dev": "npm-run-all --parallel dev:backend dev:frontend",
+    "dev:backend": "npm --workspace backend run dev",
+    "dev:frontend": "npm --workspace frontend run dev",
+    "build": "npm-run-all build:backend build:frontend",
+    "build:backend": "npm --workspace backend run build",
+    "build:frontend": "npm --workspace frontend run build",
+    "test": "npm-run-all test:backend test:frontend",
+    "test:backend": "npm --workspace backend run test",
+    "test:frontend": "npm --workspace frontend run test",
+    "lint": "npm-run-all lint:backend lint:frontend",
+    "lint:backend": "npm --workspace backend run lint",
+    "lint:frontend": "npm --workspace frontend run lint",
+    "format": "prettier --write \"{frontend,backend}/**/*.{ts,tsx,js,json,md}\""
   },
   "dependencies": {
-    "@genkit-ai/google-genai": "^1.21.0",
-    "@hookform/resolvers": "^4.1.3",
-    "@radix-ui/react-accordion": "^1.2.3",
-    "@radix-ui/react-alert-dialog": "^1.1.6",
-    "@radix-ui/react-avatar": "^1.1.3",
-    "@radix-ui/react-checkbox": "^1.1.4",
-    "@radix-ui/react-dialog": "^1.1.6",
-    "@radix-ui/react-dropdown-menu": "^2.1.6",
-    "@radix-ui/react-label": "^2.1.2",
-    "@radix-ui/react-menubar": "^1.1.6",
-    "@radix-ui/react-popover": "^1.1.6",
-    "@radix-ui/react-progress": "^1.1.2",
-    "@radix-ui/react-radio-group": "^1.2.3",
-    "@radix-ui/react-scroll-area": "^1.2.3",
-    "@radix-ui/react-select": "^2.1.6",
-    "@radix-ui/react-separator": "^1.1.2",
-    "@radix-ui/react-slider": "^1.2.3",
-    "@radix-ui/react-slot": "^1.1.2",
-    "@radix-ui/react-switch": "^1.1.3",
-    "@radix-ui/react-tabs": "^1.1.3",
-    "@radix-ui/react-toast": "^1.2.6",
-    "@radix-ui/react-tooltip": "^1.1.8",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "crypto": "^1.0.1",
-    "date-fns": "^3.6.0",
-    "dotenv": "^16.4.5",
-    "embla-carousel-react": "^8.1.5",
-    "express": "^4.19.2",
-    "firebase": "^11.9.1",
-    "firebase-admin": "^12.3.0",
-    "genkit": "^1.3.0",
-    "jsmpeg": "^1.0.0",
-    "lucide-react": "^0.475.0",
-    "next": "14.2.4",
-    "patch-package": "^8.0.0",
-    "react": "^18.2.0",
-    "react-day-picker": "^8.10.1",
-    "react-dom": "^18.2.0",
-    "react-hook-form": "^7.54.2",
-    "recharts": "^2.15.1",
-    "tailwind-merge": "^3.0.1",
-    "tailwindcss-animate": "^1.0.7",
-    "ws": "^8.17.1",
-    "zod": "^3.24.2"
+    "hls.js": "^1.5.8"
   },
   "devDependencies": {
-    "@types/express": "^4.17.21",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "@types/ws": "^8.5.10",
-    "genkit-cli": "1.3.0",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "ts-node": "^10.9.2",
-    "tsx": "^4.15.6",
-    "cross-env": "^7.0.3",
-    "typescript": "^5"
+    "npm-run-all": "^4.1.5",
+    "prettier": "^3.3.2"
   }
 }
