--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,7 @@
     "test": "vitest --config vitest.config.ts"
   },
   "dependencies": {
-    "@xdnweb/tiny-async-pool": "^1.0.4",
+    "tiny-async-pool": "^1.0.4",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
@@ -26,7 +26,7 @@
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20.14.10",
-    "@types/supertest": "^6.0.4",
+    "@types/supertest": "^6.0.3",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
     "@typescript-eslint/parser": "^7.18.0",
     "eslint": "^9.6.0",
