--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "hls.js": "^1.5.8"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^7.18.0",
+    "@typescript-eslint/parser": "^7.18.0",
+    "eslint": "^8.57.1",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.3.2"
   }
