--- a/firebase.json
+++ b/firebase.json
@@ -1,4 +1,3 @@
-
 {
   "hosting": {
     "source": ".",
@@ -9,6 +8,16 @@
     ],
     "frameworksBackend": {
       "region": "us-central1"
+    }
+  },
+  "apphosting": {
+    "build": {
+      "env": [
+        {
+          "key": "BP_NODE_PROJECT_PATH",
+          "value": "backend"
+        }
+      ]
     }
   },
   "firestore": {
