--- a/backend/package.json
+++ b/backend/package.json
@@ -5,6 +5,11 @@
   "type": "module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+
+  "engines": {
+    "node": ">=18"
+  },
+
   "scripts": {
     "dev": "tsx watch src/index.ts",
     "build": "tsc -p tsconfig.build.json",
@@ -12,6 +17,7 @@
     "lint": "eslint \"src/**/*.{ts,tsx}\"",
     "test": "vitest --config vitest.config.ts"
   },
+
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
@@ -23,6 +29,7 @@
     "tiny-async-pool": "^1.0.4",
     "zod": "^3.24.2"
   },
+
   "devDependencies": {
     "@types/cors": "^2.8.19",
     "@types/express": "^4.17.21",
