--- a/apphosting.yaml
+++ b/apphosting.yaml
@@ -1,19 +1,17 @@
-# Settings to manage and configure a Firebase App Hosting backend.
-# https://firebase.google.com/docs/app-hosting/configure
-#
-# This file is used to configure the behavior of the App Hosting backend.
-# It is used to specify the run command, the environment variables, and other
-# settings.
+# Firebase App Hosting backend configuration
 
-# The command to run to start the server
-run: npm run start
+# Tell Firebase the real backend folder
+workspace: backend
 
-# The commands to run to build the app
+# Build steps executed inside the backend folder
 build:
   - run: npm install
   - run: npm run build
 
-# The runtime configuration for the backend
+# Start command
+run: npm run start
+
+# Resource limits
 runConfig:
   cpu: 1
   memoryMiB: 512
