--- a/apphosting.yaml
+++ b/apphosting.yaml
@@ -1,18 +1,12 @@
-# Firebase App Hosting backend configuration
-
-# Tell Firebase the real backend folder
-workspace: backend
-
-# Build steps executed inside the backend folder
-build:
-  - run: npm install
-  - run: npm run build
-
-# Start command
-run: npm run start
-
-# Resource limits
+# apphosting.yaml
 runConfig:
   cpu: 1
   memoryMiB: 512
   maxInstances: 2
+
+env:
+  # Tell the buildpack to run npm/yarn inside the backend folder
+  - variable: BP_NODE_PROJECT_PATH
+    value: backend
+    availability:
+      - BUILD
