--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,16 +1,12 @@
 {
-  "extends": "../tsconfig.base.json",
   "compilerOptions": {
+    "target": "ES2022",
+    "module": "ES2022",
+    "moduleResolution": "Node",
+    "strict": true,
     "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
-    "moduleResolution": "NodeNext",
-    "module": "NodeNext",
-    "target": "ES2020",
-    "types": ["node"],
-    "resolveJsonModule": true,
     "skipLibCheck": true,
-    "noEmit": true
-  },
-  "include": ["src/**/*.ts", "src/**/*.d.ts", "tests/**/*.ts"],
-  "exclude": ["dist", "node_modules"]
+    "forceConsistentCasingInFileNames": true,
+    "resolveJsonModule": true
+  }
 }
