--- a/backend/tsconfig.build.json
+++ b/backend/tsconfig.build.json
@@ -1,10 +1,8 @@
 {
-  "extends": "../tsconfig.base.json",
+  "extends": "./tsconfig.json",
   "compilerOptions": {
-    "outDir": "./dist",
-    "rootDir": "./src",
-    "declaration": true
+    "declaration": true,
+    "sourceMap": false
   },
-  "include": ["src/**/*.ts"],
-  "exclude": ["**/*.test.ts", "node_modules", "dist"]
+  "include": ["src/**/*.ts"]
 }
