--- a/backend/tsconfig.build.json
+++ b/backend/tsconfig.build.json
@@ -1,8 +1,7 @@
 {
-  "extends": "./tsconfig.json",
+  "extends": "../tsconfig.base.json",
   "compilerOptions": {
-    "declaration": true,
-    "sourceMap": false
+    "outDir": "dist"
   },
-  "include": ["src/**/*.ts"]
+  "include": ["src"]
 }
