--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,10 +1,11 @@
 {
   "extends": "../tsconfig.base.json",
   "compilerOptions": {
-    "rootDir": "./src",
-    "outDir": "./dist",
-    "noEmit": false
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "strict": true,
+    "baseUrl": "./src",
+    "outDir": "dist"
   },
-  "include": ["src/**/*.ts"],
-  "exclude": ["**/*.test.ts", "node_modules", "dist"]
+  "include": ["src"]
 }
