--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -1,17 +1,13 @@
 {
   "compilerOptions": {
     "target": "ES2020",
-    "lib": ["ES2021"],
-    "module": "ESNext",
-    "moduleResolution": "nodenext",
-    "allowSyntheticDefaultImports": true,
-    "esModuleInterop": true,
+    "module": "ES2020",
+    "moduleResolution": "node",
     "resolveJsonModule": true,
-    "forceConsistentCasingInFileNames": true,
-    "strict": true,
+    "isolatedModules": false,
+    "esModuleInterop": true,
     "skipLibCheck": true,
-    "noImplicitReturns": true,
-    "noFallthroughCasesInSwitch": true,
-    "useUnknownInCatchVariables": false
+    "forceConsistentCasingInFileNames": true,
+    "strict": true
   }
 }
