fix(runtime): convert backend to pure ESM and fix pino-http import

--- a/backend/tsconfig.build.json
+++ b/backend/tsconfig.build.json
@@ -1,8 +1,10 @@
 {
   "extends": "./tsconfig.base.json",
   "compilerOptions": {
+    "module": "ESNext",
+    "moduleResolution": "NodeNext",
     "outDir": "./dist",
     "rootDir": "./src"
   },
-  "include": ["./src"]
+  "include": ["src"]
 }
