--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "workspaces": [
     "backend",
-    "backend"
+    "frontend"
   ],
   "scripts": {
     "dev": "npm-run-all --parallel dev:backend dev:frontend",
@@ -19,6 +19,7 @@
     "lint": "npm-run-all lint:backend lint:frontend",
     "lint:backend": "npm --workspace backend run lint",
     "lint:frontend": "npm --workspace frontend run lint",
+    "postinstall": "patch-package || true",
     "format": "prettier --write \"{frontend,backend}/**/*.{ts,tsx,js,json,md}\""
   },
   "dependencies": {
@@ -30,7 +31,9 @@
     "@typescript-eslint/parser": "^7.18.0",
     "eslint": "^8.57.1",
     "npm-run-all": "^4.1.5",
-    "prettier": "^3.3.2"
+    "prettier": "^3.3.2",
+    "patch-package": "^8.0.0",
+    "postinstall-postinstall": "^2.1.0"
   },
   "packageManager": "npm@10.8.2"
 }
