--- a/backend/package.json
+++ b/backend/package.json
@@ -1,49 +1,39 @@
 {
-  "name": "@camera-bridge/backend",
+  "name": "camera-bridge-platform",
   "version": "0.1.0",
   "private": true,
-  "type": "module",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
-
-  "engines": {
-    "node": ">=18"
-  },
-
+  "workspaces": [
+    "backend",
+    "frontend"
+  ],
   "scripts": {
-    "dev": "tsx watch src/index.ts",
-    "build": "tsc -p tsconfig.build.json",
-    "start": "node dist/index.js",
-    "lint": "eslint \"src/**/*.{ts,tsx}\"",
-    "test": "vitest --config vitest.config.ts"
+    "dev": "npm-run-all --parallel dev:backend dev:frontend",
+    "dev:backend": "npm --workspace backend run dev",
+    "dev:frontend": "npm --workspace frontend run dev",
+    "build": "npm-run-all build:backend build:frontend",
+    "build:backend": "npm --workspace backend run build",
+    "build:frontend": "npm --workspace frontend run build",
+    "test": "npm-run-all test:backend test:frontend",
+    "test:backend": "npm --workspace backend run test",
+    "test:frontend": "npm --workspace frontend run test",
+    "lint": "npm-run-all lint:backend lint:frontend",
+    "lint:backend": "npm --workspace backend run lint",
+    "lint:frontend": "npm --workspace frontend run lint",
+    "postinstall": "patch-package || true",
+    "format": "prettier --write \"{frontend,backend}/**/*.{ts,tsx,js,json,md}\""
   },
-
   "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "helmet": "^7.1.0",
-    "pino": "^9.1.0",
-    "pino-http": "^10.2.0",
-    "pino-pretty": "^11.2.2",
-    "tiny-async-pool": "^1.0.4",
-    "zod": "^3.24.2"
+    "hls.js": "^1.5.8",
+    "patch-package": "^8.0.0",
+    "postinstall-postinstall": "^2.1.0"
   },
-
   "devDependencies": {
-    "@types/cors": "^2.8.19",
-    "@types/express": "^4.17.21",
-    "@types/node": "^20.14.10",
-    "@types/supertest": "^6.0.3",
+    "@types/cors": "2.8.19",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
     "@typescript-eslint/parser": "^7.18.0",
     "eslint": "^8.57.1",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-security": "^2.1.1",
-    "nock": "^14.0.4",
-    "supertest": "^7.0.0",
-    "tsx": "^4.15.6",
-    "typescript": "^5.9.3",
-    "vitest": "^1.6.0"
-  }
+    "npm-run-all": "^4.1.5",
+    "prettier": "^3.3.2"
+  },
+  "packageManager": "npm@10.8.2"
 }
