--- a/package.json
+++ b/package.json
@@ -8,22 +8,17 @@
   ],
   "scripts": {
     "dev": "npm-run-all --parallel dev:backend dev:frontend",
-    "dev:backend": "npm --workspace backend run dev",
-    "dev:frontend": "npm --workspace frontend run dev",
-    "build": "npm-run-all build:backend build:frontend",
-    "build:backend": "npm --workspace backend run build",
-    "build:frontend": "npm --workspace frontend run build",
-    "test": "npm-run-all test:backend test:frontend",
-    "test:backend": "npm --workspace backend run test",
-    "test:frontend": "npm --workspace frontend run test",
-    "lint": "npm-run-all lint:backend lint:frontend",
-    "lint:backend": "npm --workspace backend run lint",
-    "lint:frontend": "npm --workspace frontend run lint",
+    "dev:backend": "cd backend && npm run dev",
+    "dev:frontend": "cd frontend && npm run dev",
+    "build": "cd backend && npm run build",
+    "test": "cd backend && npm run test",
+    "lint": "cd backend && npm run lint",
     "postinstall": "patch-package || true",
     "format": "prettier --write \"{frontend,backend}/**/*.{ts,tsx,js,json,md}\""
   },
   "dependencies": {
-    "hls.js": "^1.5.8"
+    "hls.js": "^1.5.8",
+    "patch-package": "^8.0.1"
   },
   "devDependencies": {
     "@types/cors": "2.8.19",
@@ -31,9 +26,7 @@
     "@typescript-eslint/parser": "^7.18.0",
     "eslint": "^8.57.1",
     "npm-run-all": "^4.1.5",
-    "prettier": "^3.3.2",
-    "patch-package": "^8.0.0",
-    "postinstall-postinstall": "^2.1.0"
+    "prettier": "^3.3.2"
   },
   "packageManager": "npm@10.8.2"
 }
