--- a/package.json
+++ b/package.json
@@ -3,16 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "workspaces": [
-    "backend",
-    "frontend"
+    "./backend",
+    "./frontend"
   ],
   "scripts": {
     "dev": "npm-run-all --parallel dev:backend dev:frontend",
-    "dev:backend": "cd backend && npm run dev",
-    "dev:frontend": "cd frontend && npm run dev",
-    "build": "cd backend && npm run build",
-    "test": "cd backend && npm run test",
-    "lint": "cd backend && npm run lint",
+    "dev:backend": "npm --workspace backend run dev",
+    "dev:frontend": "npm --workspace frontend run dev",
+    "build": "npm-run-all build:backend build:frontend",
+    "build:backend": "npm --workspace backend run build",
+    "build:frontend": "npm --workspace frontend run build",
     "postinstall": "patch-package || true",
     "format": "prettier --write \"{frontend,backend}/**/*.{ts,tsx,js,json,md}\""
   },
