--- a/package.json
+++ b/package.json
@@ -2,31 +2,14 @@
   "name": "camera-bridge-platform",
   "version": "0.1.0",
   "private": true,
-  "workspaces": [
-    "./backend",
-    "./frontend"
-  ],
   "scripts": {
-    "dev": "npm-run-all --parallel dev:backend dev:frontend",
-    "dev:backend": "npm --workspace backend run dev",
-    "dev:frontend": "npm --workspace frontend run dev",
-    "build": "npm-run-all build:backend build:frontend",
-    "build:backend": "npm --workspace backend run build",
-    "build:frontend": "npm --workspace frontend run build",
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
     "postinstall": "patch-package || true",
-    "format": "prettier --write \"{frontend,backend}/**/*.{ts,tsx,js,json,md}\""
+    "format": "prettier --write \"{src,components}/**/*.{ts,tsx,js,jsx,json,md}\""
   },
-  "dependencies": {
-    "hls.js": "^1.5.8",
-    "patch-package": "^8.0.1"
-  },
-  "devDependencies": {
-    "@types/cors": "2.8.19",
-    "@typescript-eslint/eslint-plugin": "^7.18.0",
-    "@typescript-eslint/parser": "^7.18.0",
-    "eslint": "^8.57.1",
-    "npm-run-all": "^4.1.5",
-    "prettier": "^3.3.2"
-  },
-  "packageManager": "npm@10.8.2"
+  "dependencies": {},
+  "devDependencies": {}
 }
