--- a/apphosting.yaml
+++ b/apphosting.yaml
@@ -1,23 +1,3 @@
 runtime: nodejs22
 
-# ✅ Firebase automatically detects Next.js
-# ✅ No extra build instructions needed
-
-env:
-  - variable: NEXT_PUBLIC_FIREBASE_API_KEY
-    value: "${FIREBASE_WEBAPP_CONFIG.apiKey}"
-
-  - variable: NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN
-    value: "${FIREBASE_WEBAPP_CONFIG.authDomain}"
-
-  - variable: NEXT_PUBLIC_FIREBASE_PROJECT_ID
-    value: "${FIREBASE_WEBAPP_CONFIG.projectId}"
-
-  - variable: NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET
-    value: "${FIREBASE_WEBAPP_CONFIG.storageBucket}"
-
-  - variable: NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID
-    value: "${FIREBASE_WEBAPP_CONFIG.messagingSenderId}"
-
-  - variable: NEXT_PUBLIC_FIREBASE_APP_ID
-    value: "${FIREBASE_WEBAPP_CONFIG.appId}"
+env: []
