fix(build): remove backend build scripts and use Next.js only

--- a/package.json
+++ b/package.json
@@ -3,13 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
+    "dev": "npm --workspace frontend run dev",
+    "build": "npm --workspace frontend run build",
+    "start": "npm --workspace frontend run start",
+    "lint": "npm --workspace frontend run lint",
     "postinstall": "patch-package || true",
-    "format": "prettier --write \"{src,components}/**/*.{ts,tsx,js,jsx,json,md}\""
+    "format": "prettier --write \"frontend/**/*.{ts,tsx,js,json,md}\""
   },
-  "dependencies": {},
-  "devDependencies": {}
+  "workspaces": [
+    "frontend"
+  ],
+  "dependencies": {
+    "hls.js": "^1.5.8"
+  },
+  "devDependencies": {
+    "@types/cors": "2.8.19",
+    "@typescript-eslint/eslint-plugin": "^7.18.0",
+    "@typescript-eslint/parser": "^7.18.0",
+    "eslint": "^8.57.1",
+    "npm-run-all": "^4.1.5",
+    "prettier": "^3.3.2",
+    "patch-package": "^8.0.1"
+  },
+  "packageManager": "npm@10.8.2"
 }
