--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "npm --workspace frontend run dev",
-    "build": "npm --workspace frontend run build",
-    "start": "npm --workspace frontend run start",
+ "dev": "next dev",
+  "build": "next build",
+  "start": "next start",
     "lint": "npm --workspace frontend run lint",
     "postinstall": "patch-package || true",
     "format": "prettier --write \"frontend/**/*.{ts,tsx,js,json,md}\""
