--- a/package.json
+++ b/package.json
@@ -3,16 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
- "dev": "next dev",
-  "build": "next build",
-  "start": "next start",
-    "lint": "npm --workspace frontend run lint",
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
     "postinstall": "patch-package || true",
-    "format": "prettier --write \"frontend/**/*.{ts,tsx,js,json,md}\""
+    "format": "prettier --write \"**/*.{ts,tsx,js,json,md}\""
   },
-  "workspaces": [
-    "frontend"
-  ],
   "dependencies": {
     "hls.js": "^1.5.8"
   },
@@ -23,7 +20,7 @@
     "eslint": "^8.57.1",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.3.2",
-    "patch-package": "^8.0.1"
+    "patch-package": "8.0.1"
   },
   "packageManager": "npm@10.8.2"
 }
