--- a/package.json
+++ b/package.json
@@ -11,8 +11,13 @@
     "format": "prettier --write \"**/*.{ts,tsx,js,json,md}\""
   },
   "dependencies": {
+    "@radix-ui/react-accordion": "^1.2.12",
+    "@radix-ui/react-alert-dialog": "^1.1.15",
+    "@radix-ui/react-avatar": "^1.1.11",
+    "class-variance-authority": "^0.7.1",
     "firebase": "^12.5.0",
     "hls.js": "^1.5.8",
+    "jsmpeg": "^1.0.0",
     "lucide-react": "^0.553.0",
     "next": "14.2.15",
     "react": "18.3.1",
