--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "@genkit-ai/ai": "^1.22.0",
     "@genkit-ai/core": "^1.22.0",
+    "@genkit-ai/googleai": "^1.22.0",
+    "@genkit-ai/vertexai": "^1.22.0",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-avatar": "^1.1.11",
@@ -40,13 +42,15 @@
     "jsmpeg": "^1.0.0",
     "lucide-react": "^0.553.0",
     "next": "14.2.15",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "tailwind-merge": "^3.3.1",
     "zod": "^3.25.76"
   },
   "devDependencies": {
     "@types/cors": "2.8.19",
+    "@types/react": "^18.3.26",
+    "@types/react-dom": "^18.3.7",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
     "@typescript-eslint/parser": "^7.18.0",
     "autoprefixer": "^10.4.21",
@@ -54,7 +58,8 @@
     "patch-package": "8.0.1",
     "postcss": "^8.5.6",
     "prettier": "^3.3.2",
-    "tailwindcss": "^4.1.17"
+    "tailwindcss": "^4.1.17",
+    "typescript": "^5.9.3"
   },
   "packageManager": "npm@10.8.2"
 }
