--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -5,36 +5,19 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "typecheck": "tsc --noEmit",
-    "test": "vitest"
+    "start": "next start"
   },
   "dependencies": {
-    "@difae/ui": "workspace:*",
-    "@hookform/resolvers": "^3.6.0",
-    "class-variance-authority": "^0.7.1",
-    "firebase": "^10.12.2",
-    "framer-motion": "^11.0.13",
-    "lucide-react": "^0.390.0",
-    "next": "^14.2.3",
-    "next-seo": "^6.5.0",
-    "react": "^18.3.0",
-    "react-dom": "^18.3.0",
-    "react-hook-form": "^7.51.0",
-    "zod": "^3.22.4"
+    "lucide-react": "^0.553.0",
+    "next": "14.2.15",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^6.4.2",
-    "@testing-library/react": "^15.0.0",
-    "@testing-library/user-event": "^14.5.2",
-    "@types/react": "^18.3.0",
-    "@types/react-dom": "^18.3.0",
-    "eslint-config-next": "^14.2.3",
-    "jsdom": "^24.0.0",
-    "postcss": "^8.4.35",
-    "tailwindcss": "^3.4.3",
-    "typescript": "^5.4.5",
-    "vitest": "^1.5.0"
+    "@types/react": "^18.3.26",
+    "@types/react-dom": "^18.3.7",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.17",
+    "typescript": "^5.9.3"
   }
 }
