--- a/apphosting.yaml
+++ b/apphosting.yaml
@@ -1,1 +1,3 @@
+# Firebase App Hosting uses the Next.js adapter, which now runs `next build`
+# directly because the Turborepo configuration has been removed.
 runtime: nodejs22
