--- a/apphosting.yaml
+++ b/apphosting.yaml
@@ -1,3 +1,3 @@
-# Firebase App Hosting uses the Next.js adapter, which now runs `next build`
-# directly because the Turborepo configuration has been removed.
+# Firebase App Hosting uses the Next.js adapter and runs `npx next build apps/web`
+# during deploys, matching the monorepo layout.
 runtime: nodejs22
