--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -6,8 +6,16 @@
       {
         "name": "next"
       }
-    ]
+    ],
+    "incremental": true,
+    "esModuleInterop": true
   },
-  "include": ["next-env.d.ts", "app/**/*"],
-  "exclude": ["node_modules"]
+  "include": [
+    "next-env.d.ts",
+    "app/**/*",
+    ".next/types/**/*.ts"
+  ],
+  "exclude": [
+    "node_modules"
+  ]
 }
