--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,10 +17,8 @@ jobs:
         with:
           node-version: 20
 
-      - name: Setup PNPM
-        uses: pnpm/action-setup@v4
-        with:
-          version: 9
+      - name: Setup pnpm
+        run: corepack prepare pnpm@9.12.0 --activate
 
       - name: Install dependencies
         run: pnpm install
