--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,6 +17,9 @@ jobs:
         with:
           node-version: 20
 
+      - name: Enable Corepack shims
+        run: corepack enable
+
       - name: Setup pnpm
         run: corepack prepare pnpm@9.12.0 --activate
 
