--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,12 +16,12 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: 'pnpm'
 
-      - name: Setup PNPM
-        uses: pnpm/action-setup@v4
-        with:
-          version: 9
+      - name: Enable Corepack shims
+        run: corepack enable
+
+      - name: Setup pnpm
+        run: corepack prepare pnpm@9.12.0 --activate
 
       - name: Install dependencies
         run: pnpm install
