--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -13,7 +13,7 @@
   "include": [
     "next-env.d.ts",
     "app/**/*",
-    ".next/types/**/*.ts"
+    "../../.next/types/**/*.ts"
   ],
   "exclude": [
     "node_modules"
