--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "packageManager": "pnpm@9.12.0",
   "scripts": {
     "dev": "next dev apps/web",
-    "build": "next build apps/web && node scripts/copy-next-output.mjs",
+    "build": "next build apps/web",
     "start": "next start apps/web",
     "lint": "echo \"Linting handled in downstream pipelines\"",
     "test": "echo \"No automated tests configured\"",
