Restore SEO defaults without Google font

--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -6,17 +6,8 @@
       {
         "name": "next"
       }
-    ],
-    "incremental": true,
-    "esModuleInterop": true
+    ]
   },
-  "include": [
-    "next-env.d.ts",
-    "app/**/*",
-    ".next/types/**/*.ts",
-    "../../.next/types/**/*.ts"
-  ],
-  "exclude": [
-    "node_modules"
-  ]
+  "include": ["next-env.d.ts", "app/**/*"],
+  "exclude": ["node_modules"]
 }
