--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "packageManager": "pnpm@9.12.0",
   "scripts": {
     "dev": "next dev apps/web",
-    "build": "next build apps/web",
+    "build": "next build apps/web && rm -rf .next && cp -R apps/web/.next .next && if [ -d .next/standalone/apps/web/.next ]; then rm -rf .next/standalone/.next && mkdir -p .next/standalone && cp -R .next/standalone/apps/web/.next .next/standalone/.next; fi",
     "start": "next start apps/web",
     "lint": "echo \"Linting handled in downstream pipelines\"",
     "test": "echo \"No automated tests configured\"",
