--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "next dev apps/web",
     "build": "next build apps/web && rm -rf .next && cp -R apps/web/.next .next && if [ -d .next/standalone/apps/web/.next ]; then rm -rf .next/standalone/.next && mkdir -p .next/standalone && cp -R .next/standalone/apps/web/.next .next/standalone/.next; fi",
-    "start": "next start apps/web",
+    "start": "next start apps/web -p ${PORT:-3000} -H 0.0.0.0",
     "lint": "echo \"Linting handled in downstream pipelines\"",
     "test": "echo \"No automated tests configured\"",
     "typecheck": "tsc --project apps/web/tsconfig.json --noEmit",
