--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -11,7 +11,7 @@
     "test": "vitest"
   },
   "dependencies": {
-    "@difae/ui": "workspace:*",
+    "@difae/ui": "file:../../packages/ui",
     "@hookform/resolvers": "^3.6.0",
     "firebase": "^10.12.2",
     "lucide-react": "^0.390.0",
@@ -24,6 +24,7 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^15.0.0",
+    "@tailwindcss/postcss": "file:../../packages/tailwind-postcss",
     "@testing-library/user-event": "^14.5.2",
     "@types/react": "^18.3.0",
     "@types/react-dom": "^18.3.0",
