--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "file:../../packages/tailwind-postcss",
     "@types/react": "^18.3.26",
     "@types/react-dom": "^18.3.7",
     "postcss": "^8.5.6",
