--- a/package.json
+++ b/package.json
@@ -2,7 +2,13 @@
   "name": "difaeai",
   "private": true,
   "version": "0.1.0",
-  "packageManager": "pnpm@9.12.0",
+  "packageManager": "npm@10.8.2",
+  "workspaces": {
+    "packages": [
+      "apps/*",
+      "packages/*"
+    ]
+  },
   "scripts": {
     "dev": "next dev apps/web",
     "prebuild": "node scripts/prebuild.js",
@@ -54,9 +60,11 @@
     "@types/cors": "2.8.19",
     "@types/react": "^18.3.26",
     "@types/react-dom": "^18.3.7",
+    "@tailwindcss/postcss": "file:packages/tailwind-postcss",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
     "@typescript-eslint/parser": "^7.18.0",
     "autoprefixer": "^10.4.21",
+    "fast-glob": "^3.3.2",
     "eslint": "^8.57.1",
     "patch-package": "8.0.1",
     "postcss": "^8.5.6",
